--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
     <title>Name Website</title>
   </head>
   <body>
-    <button type="button" name="button">Click Me!</button>
-    <div class="welcome-panel hide">
-      <div class="welcome-panel-inner">
-        <span>Hello World!</span>
+    <div class="center-center title page-title-area">
+      <div class="page-title-container">
+        Our Team
       </div>
     </div>
+    <div class="center-center subtitle page-subtitle-area">
+      <div class="page-subtitle-container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
+    <div class="center-center grid team-member-area">
+      <div class="center-center team-member-item">
+        uwu
+      </div>
+      <div class="center-center team-member-item">
+        uwu
+      </div>
+      <div class="center-center team-member-item">
+        uwu
+      </div>
+      <div class="center-center team-member-item">
+        uwu
+      </div>
+      <div class="center-center team-member-item">
+        uwu
+      </div>
+    </div>
+
   </body>
   <script src="app.js"></script>
 </html>
