build member class

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Name Website</title>
   </head>
@@ -19,19 +20,41 @@
     </div>
 
     <div class="center-center grid team-member-area">
-      <div class="center-center team-member-item">
+      <div class="flex-column team-member-item">
+        <div class="ava center-center">
+          <img src="img/tung.png" alt="">
+        </div>
+        <div class="job-title">
+          An Hai 1
+        </div>
+        <div class="name">
+          Vo Le Xuan Tung
+        </div>
+        <div class="snumber">
+          s3804684
+        </div>
+        <div class="background">
+          <div class="background-item">
+            <i class="fa-solid fa-flag-pennant"></i>
+            22 Years Old
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-diploma"></i>
+            Bachelor of Business
+          </div>
+          <span>Living in District 7, HCMC</span>
+        </div>
+      </div>
+      <div class="center-left team-member-item">
         uwu
       </div>
-      <div class="center-center team-member-item">
+      <div class="center-left team-member-item">
         uwu
       </div>
-      <div class="center-center team-member-item">
+      <div class="center-left team-member-item">
         uwu
       </div>
-      <div class="center-center team-member-item">
-        uwu
-      </div>
-      <div class="center-center team-member-item">
+      <div class="center-left team-member-item">
         uwu
       </div>
     </div>
