update member class

--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
         </div>
         <div class="background">
           <div class="background-item">
-            <i class="fa-solid fa-flag-pennant"></i>
+            <i class="fa-solid fa-flag"></i>
             22 Years Old
           </div>
           <div class="background-item">
-            <i class="fa-solid fa-diploma"></i>
+            <i class="fa-solid fa-paper-plane"></i>
             Bachelor of Business
           </div>
-          <span>Living in District 7, HCMC</span>
+          <div class="background-item">
+            <i class="fa-solid fa-house"></i>
+            District 7, HCMC
+          </div>
         </div>
       </div>
       <div class="center-left team-member-item">
