--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="img/tung.png" alt="">
         </div>
         <div class="job-title">
-          An Hai 1
+          Ăn Hại 1
         </div>
         <div class="name">
           Vo Le Xuan Tung
@@ -45,6 +45,12 @@
           <div class="background-item">
             <i class="fa-solid fa-house"></i>
             District 7, HCMC
+          </div>
+          <div class="background-item it-interests-box">
+            <div class="it-interests-title">
+              IT Interest
+            </div>
+            <p>Web Development, IoT</p>
           </div>
         </div>
       </div>
