update Vinh's, Kiet's, Khoa's profile

--- a/index.html
+++ b/index.html
@@ -54,18 +54,109 @@
           </div>
         </div>
       </div>
-      <div class="center-left team-member-item">
-        uwu
+      <div class="flex-column team-member-item">
+        <div class="ava center-center">
+          <img src="img/ava.png" alt="">
+        </div>
+        <div class="job-title">
+          Job Title 1
+        </div>
+        <div class="name">
+          Dinh Quang Vinh
+        </div>
+        <div class="snumber">
+          s3926232
+        </div>
+        <div class="background">
+          <div class="background-item">
+            <i class="fa-solid fa-flag"></i>
+            19 Years Old
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-paper-plane"></i>
+            Bachelor of IT
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-house"></i>
+            HCMC, Vietnam
+          </div>
+          <div class="background-item it-interests-box">
+            <div class="it-interests-title">
+              IT Interest
+            </div>
+            <p>All of IT Aspects</p>
+          </div>
+        </div>
       </div>
-      <div class="center-left team-member-item">
-        uwu
+      <div class="flex-column team-member-item">
+        <div class="ava center-center">
+          <img src="img/ava.png" alt="">
+        </div>
+        <div class="job-title">
+          Job Title 1
+        </div>
+        <div class="name">
+          Nguyen Tuan Kiet
+        </div>
+        <div class="snumber">
+          s3892188
+        </div>
+        <div class="background">
+          <div class="background-item">
+            <i class="fa-solid fa-flag"></i>
+            99 Years Old
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-paper-plane"></i>
+            Bachelor of IT
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-house"></i>
+            HCMC, Vietnam
+          </div>
+          <div class="background-item it-interests-box">
+            <div class="it-interests-title">
+              IT Interest
+            </div>
+            <p>AI, Web Development</p>
+          </div>
+        </div>
       </div>
-      <div class="center-left team-member-item">
-        uwu
+      <div class="flex-column team-member-item">
+        <div class="ava center-center">
+          <img src="img/ava.png" alt="">
+        </div>
+        <div class="job-title">
+          Job Title 1
+        </div>
+        <div class="name">
+          Dang Hoang Dang Khoa
+        </div>
+        <div class="snumber">
+          s3941127
+        </div>
+        <div class="background">
+          <div class="background-item">
+            <i class="fa-solid fa-flag"></i>
+            21 Years Old
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-paper-plane"></i>
+            Bachelor of IT
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-house"></i>
+            HCMC, Vietnam
+          </div>
+          <div class="background-item it-interests-box">
+            <div class="it-interests-title">
+              IT Interest
+            </div>
+            <p>AI, Robotics</p>
+          </div>
+        </div>
       </div>
-      <div class="center-left team-member-item">
-        uwu
-      </div>
+
     </div>
 
   </body>
