--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
-          <img src="img/ava.png" alt="">
+          <img src="img/vinh.png" alt="">
         </div>
         <div class="job-title">
           Job Title 1
