update all profiles

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
   <body>
     <div class="center-center title page-title-area">
       <div class="page-title-container">
-        Our Team
-      </div>
-    </div>
-    <div class="center-center subtitle page-subtitle-area">
-      <div class="page-subtitle-container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Muaoko Team
       </div>
     </div>
 
@@ -25,7 +20,7 @@
           <img src="img/tung.png" alt="">
         </div>
         <div class="job-title">
-          Ăn Hại 1
+          Job Title
         </div>
         <div class="name">
           Vo Le Xuan Tung
@@ -78,7 +73,7 @@
           </div>
           <div class="background-item">
             <i class="fa-solid fa-house"></i>
-            HCMC, Vietnam
+            Nha Be, HCMC
           </div>
           <div class="background-item it-interests-box">
             <div class="it-interests-title">
@@ -90,7 +85,7 @@
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
-          <img src="img/ava.png" alt="">
+          <img src="img/kiet.png" alt="">
         </div>
         <div class="job-title">
           Job Title 1
@@ -104,7 +99,7 @@
         <div class="background">
           <div class="background-item">
             <i class="fa-solid fa-flag"></i>
-            99 Years Old
+            20 Years Old
           </div>
           <div class="background-item">
             <i class="fa-solid fa-paper-plane"></i>
@@ -112,7 +107,7 @@
           </div>
           <div class="background-item">
             <i class="fa-solid fa-house"></i>
-            HCMC, Vietnam
+            District 7, HCMC
           </div>
           <div class="background-item it-interests-box">
             <div class="it-interests-title">
@@ -124,7 +119,7 @@
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
-          <img src="img/ava.png" alt="">
+          <img src="img/khoa.png" alt="">
         </div>
         <div class="job-title">
           Job Title 1
@@ -146,7 +141,7 @@
           </div>
           <div class="background-item">
             <i class="fa-solid fa-house"></i>
-            HCMC, Vietnam
+            Binh Chanh, HCMC
           </div>
           <div class="background-item it-interests-box">
             <div class="it-interests-title">
@@ -156,7 +151,40 @@
           </div>
         </div>
       </div>
-
+      <div class="flex-column team-member-item">
+        <div class="ava center-center">
+          <img src="img/trung.png" alt="">
+        </div>
+        <div class="job-title">
+          Job Title 1
+        </div>
+        <div class="name">
+          Nguyen Quoc Trung
+        </div>
+        <div class="snumber">
+          s3929342
+        </div>
+        <div class="background">
+          <div class="background-item">
+            <i class="fa-solid fa-flag"></i>
+            19 Years Old
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-paper-plane"></i>
+            Bachelor of IT
+          </div>
+          <div class="background-item">
+            <i class="fa-solid fa-house"></i>
+            Binh Tan, HCMC
+          </div>
+          <div class="background-item it-interests-box">
+            <div class="it-interests-title">
+              IT Interest
+            </div>
+            <p>Game Development</p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </body>
