add index.html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Name Website</title>
+    <title>Muaoko</title>
   </head>
   <body>
     <div class="center-center title page-title-area">
@@ -20,7 +20,7 @@
           <img src="img/tung.png" alt="">
         </div>
         <div class="job-title">
-          Job Title
+          Web Developer
         </div>
         <div class="name">
           Vo Le Xuan Tung
@@ -48,13 +48,17 @@
             <p>Web Development, IoT</p>
           </div>
         </div>
+        <div class="center-center career-plan">
+          <p style="color: var(--color1); font-size: 18px; font-weight: 600;"><u>Career Plan</u></p>
+          <p style="text-align: center;">Integrate IT to Business</p>
+        </div>
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
           <img src="img/vinh.png" alt="">
         </div>
         <div class="job-title">
-          Job Title 1
+          Software Tester
         </div>
         <div class="name">
           Dinh Quang Vinh
@@ -82,13 +86,17 @@
             <p>All of IT Aspects</p>
           </div>
         </div>
+        <div class="center-center career-plan">
+          <p style="color: var(--color1); font-size: 18px; font-weight: 600;"><u>Career Plan</u></p>
+          <p style="text-align: center;">Game Developer bringing amazing stories</p>
+        </div>
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
           <img src="img/kiet.png" alt="">
         </div>
         <div class="job-title">
-          Job Title 1
+          IT Leader
         </div>
         <div class="name">
           Nguyen Tuan Kiet
@@ -116,13 +124,17 @@
             <p>AI, Web Development</p>
           </div>
         </div>
+        <div class="center-center career-plan">
+          <p style="color: var(--color1); font-size: 18px; font-weight: 600;"><u>Career Plan</u></p>
+          <p style="text-align: center;">Professional AI Developer</p>
+        </div>
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
           <img src="img/khoa.png" alt="">
         </div>
         <div class="job-title">
-          Job Title 1
+          Technical Designer
         </div>
         <div class="name">
           Dang Hoang Dang Khoa
@@ -150,13 +162,17 @@
             <p>AI, Robotics</p>
           </div>
         </div>
+        <div class="center-center career-plan">
+          <p style="color: var(--color1); font-size: 18px; font-weight: 600;"><u>Career Plan</u></p>
+          <p style="text-align: center;">Game Developer bringing magnifient graphic design </p>
+        </div>
       </div>
       <div class="flex-column team-member-item">
         <div class="ava center-center">
           <img src="img/trung.png" alt="">
         </div>
         <div class="job-title">
-          Job Title 1
+          User Interface Designer
         </div>
         <div class="name">
           Nguyen Quoc Trung
@@ -184,8 +200,41 @@
             <p>Game Development</p>
           </div>
         </div>
+        <div class="center-center career-plan">
+          <p style="color: var(--color1); font-size: 18px; font-weight: 600;"><u>Career Plan</u></p>
+          <p style="text-align: center;">Game Designer with attractive products</p>
+        </div>
       </div>
     </div>
 
+    <div class="team-process">
+      <div class="center-center title page-title-area">
+        <div class="page-title-container">
+          Group Process Overview
+        </div>
+      </div>
+      <div class="team-process-box">
+        <h2>Method:</h2>
+        <li>
+          Online Meetings twice a week on Wednesday and Saturday
+        </li>
+        <li>
+          Face-to-face Meetings after weekly tutorial classes
+        </li>
+        <h2>Performance:</h2>
+        <li>
+          100% team member participated.
+        </li>
+        <li>
+          100% team member showed a open mindset and an active engagement.
+        </li>
+        <li>
+          We felt free to raise any issue and find the solutions together.
+        </li>
+      </div>
+    </div>
   </body>
+  <footer>
+
+  </footer>
 </html>
